# IMVU-Insight

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  db.py  logging.py  scheduler.py
backend/app/models/: __init__.py  data_sync.py  developer.py  imvu_user.py  income_transaction.py  product.py  raw_income_log.py  raw_product_list.py  refresh_token.py  user.py  user_developer.py
backend/app/routes/: auth.py  buyer.py  data_sync.py  imvu_user.py  income_transaction.py  product.py  recipient.py
backend/app/security/: jwt.py  middleware.py  models.py  policy.py
backend/app/services/: __init__.py  buyer_service.py  data_sync_developer_service.py  data_sync_imvu_user_service.py  data_sync_income_service.py  data_sync_product_service.py  data_sync_service.py  developer_service.py  imvu_user_service.py  income_transaction_service.py  product_service.py  recipient_service.py  refresh_token_service.py  user_service.py
backend/config/: config.dev.yaml  config.prod.yaml
docs/: data-model-design.en-US.md  data-model-design.ja-JP.md  data-model-design.zh-CN.md  data-model-design.zh-TW.md
frontend/: README.md  package-lock.json  package.json
frontend/config/: config.ts  proxy.ts  routes.ts
frontend/src/: app.ts
frontend/src/components/: AccountMenu.tsx  HeaderDropdown.tsx
frontend/src/locales/: en-US.ts  es-ES.ts  ja-JP.ts  zh-CN.ts  zh-TW.ts
frontend/src/pages/: 404.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/DataSync/: index.tsx
frontend/src/pages/Login/: index.tsx
(+39 files in other folders)
